tests/NormalTests/paczka1/fuzzy1/11670090.err
Error in line 1: JPzERF A78 23,9
Error in line 3: A78 A78 73,3
Error in line 15: A78 A712 82,9
Error in line 21: 2vG8VEoM A918 57,5
Error in line 25: 2vG8VEoM A712 52,2
Error in line 18: JPzERF S141 43,9
